# DearStory

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DearStory.slnx  Directory.Build.props  Directory.Packages.props  Doxyfile  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-1a3-report.md  task-1b1-report.md
cmake/: DearStoryConfig.cmake.in  DearStoryConfigVersion.cmake.in  dearstory_warnings.cmake
docs/adr/: 0001-control-protocol.md  0002-story-model-and-schema-contracts.md  0003-windows-host-baseline.md  0004-visual-capture-and-baselines.md
docs/architecture/: capture-and-visual-regression.md  core-story-model.md  library-product-boundary.md  protocol-bootstrap.md  windows-host-baseline.md
docs/guides/: authoring-stories.md  building-windows.md  consuming-cpp-package.md  consuming-dotnet-packages.md  releasing-packages.md  static-docs.md  visual-baselines.md  windows-dev-workflow.md
docs/protocol/: argument-schema-subset.md  control-v1.md  frame-transport-v1.md
docs/standards/: documentation-and-quality.md
docs/superpowers/plans/: 2026-07-15-dearstory-protocol-bootstrap.md  2026-07-16-dearstory-core-story-model-and-schemas.md  2026-07-17-dearstory-capture-and-visual-regression.md  2026-07-17-dearstory-windows-hosts-rgba-catalog-and-static-docs.md  2026-07-18-dearstory-library-surface-and-packaging.md  2026-07-19-dearstory-release-automation.md
docs/superpowers/specs/: 2026-07-15-dearstory-design.md  2026-07-17-dearstory-capture-and-visual-regression-design.md  2026-07-18-dearstory-library-surface-design.md  2026-07-19-dearstory-release-automation-design.md
eng/: Doctor.psm1  assert-coverage.ps1  assert-public-package-boundaries.ps1  build.ps1  doctor.ps1  generate-protocol.ps1  generate-release-manifest.ps1  pack.ps1  read-version.ps1  release.ps1  test.ps1
examples/workspaces/windows-slice/: dearstory.toml
examples/workspaces/windows-slice/docs/: buttons-primary.md
protocol/control/: control-envelope.schema.json  messages.json
protocol/test-vectors/handshake/: hello.missing-message-id.json  hello.valid.json  reject.major-mismatch.json  welcome.valid.json
protocol/test-vectors/stories/: argument-patch-rejected.invalid.json  story-index-published.valid.json  story-session-open.valid.json
schemas/arguments/: dearstory-args.schema.json
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/dearstory/sdk/: argument_descriptor.hpp  macros.hpp  story_context.hpp  story_registration.hpp  story_registry.hpp
sdk/cpp/src/: story_registry.cpp
sdk/dotnet/DearStory.Sdk/: DearStory.Sdk.csproj  GeneratedStoryRegistry.cs  ReflectionStoryRegistry.cs  ReflectionStoryRegistryOptions.cs  StoryArgAttribute.cs  StoryAttribute.cs  StoryContext.cs  packages.lock.json
sdk/dotnet/DearStory.Sdk.Generator/: AnalyzerReleases.Unshipped.md  DearStory.Sdk.Generator.csproj  StoryRegistryGenerator.cs  XmlDocumentationReader.cs  packages.lock.json
src/capture/dotnet/DearStory.Capture/: CaptureApprovalService.cs  CaptureArtifactLayout.cs  CaptureBackendKind.cs  CaptureCorpusResolver.cs  CapturedFrame.cs  ComparisonClassification.cs  DearStory.Capture.csproj  IVisualFrameSource.cs  ImageComparer.cs  VisualCaptureRequest.cs  VisualCaptureResult.cs  VisualCaptureService.cs  packages.lock.json
src/core/cpp/: CMakeLists.txt
src/core/cpp/include/dearstory/core/: action_event.hpp  argument_patch_validator.hpp  argument_schema.hpp  deterministic_clock.hpp  deterministic_random.hpp  interaction_target.hpp  log_event.hpp  story_catalog.hpp  story_descriptor.hpp  story_id.hpp  story_session.hpp  story_visual_descriptor.hpp
src/core/cpp/src/: argument_patch_validator.cpp  story_catalog.cpp  story_id.cpp  story_session.cpp
src/hosts/cpp/: CMakeLists.txt
src/hosts/cpp/include/dearstory/hosts/cpp/: native_host.hpp
src/hosts/cpp/src/: main.cpp  native_host.cpp
src/protocol/cpp/: CMakeLists.txt
src/protocol/cpp/include/dearstory/protocol/: codec.hpp  control_envelope.hpp  framing.hpp  handshake.hpp  version.hpp
src/protocol/cpp/include/dearstory/protocol/windows/: named_pipe_client.hpp  named_pipe_server.hpp
src/protocol/cpp/src/: codec.cpp  framing.cpp  handshake.cpp
src/protocol/cpp/src/windows/: named_pipe_client.cpp  named_pipe_server.cpp
src/transports/cpp/: CMakeLists.txt
src/transports/cpp/include/dearstory/transports/windows/: named_pipe_client.hpp  named_pipe_server.hpp  shared_memory_frame_channel.hpp
src/transports/cpp/src/: named_pipe_client.cpp  named_pipe_server.cpp  shared_memory_frame_channel.cpp
tests/consumers/cpp/: CMakeLists.txt  main.cpp  package_consumption_tests.cpp
tests/coverage/: invalid-cobertura.xml  overlap-a.xml  overlap-b.xml  valid-cobertura.xml
tests/shared/: CurrentBuildConfiguration.cs
tests/unit/core/cpp/: CMakeLists.txt  argument_patch_validator_tests.cpp  story_catalog_tests.cpp  story_id_tests.cpp  story_session_tests.cpp
tests/unit/foundation/: BuildScripts.Tests.ps1  CoverageGate.Tests.ps1  Doctor.Tests.ps1  PublicPackageBoundaries.Tests.ps1  ReleaseScripts.Tests.ps1  ReleaseVersion.Tests.ps1  ReleaseWorkflow.Tests.ps1  VisualBaselineWorkflow.Tests.ps1
tests/unit/protocol/cpp/: CMakeLists.txt  codec_tests.cpp  framing_tests.cpp  handshake_tests.cpp  test_vectors.cpp  test_vectors.hpp  version_tests.cpp
tests/unit/sdk/cpp/: CMakeLists.txt  argument_descriptor_tests.cpp  story_registry_tests.cpp
tests/unit/transports/cpp/: CMakeLists.txt  shared_memory_frame_channel_tests.cpp
tests/visual/windows/: README.md
tools/DearStory.CaptureWorker/: DearStory.CaptureWorker.csproj  Program.cs
tools/DearStory.ProtocolGenerator/: DearStory.ProtocolGenerator.csproj  Manifest.cs  ManifestException.cs  ModelEmitter.cs  Program.cs
tools/DearStory.ProtocolProbe.Cpp/: CMakeLists.txt  main.cpp
tools/DearStory.ProtocolProbe.DotNet/: DearStory.ProtocolProbe.DotNet.csproj  Program.cs  packages.lock.json
(+166 files in other folders)
